--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-matplotlib
-numpy
-pandas
-streamlit
-tensorflow
+matplotlib==3.3.3
+numpy==1.19.5
+pandas==1.2.1
+streamlit=0.79.0
+tensorflow==2.4.1
