--- a/Pipfile
+++ b/Pipfile
@@ -8,10 +8,12 @@ pandas = "*"
 matplotlib = "*"
 streamlit = "*"
 scikit-learn = "*"
+altair = "*"
 
 [dev-packages]
 jupyterlab = "*"
 flake8 = "*"
+ipykernel = "*"
 
 [requires]
 python_version = "3.8"
