--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-pandas==1.5.1
-matplotlib==3.6.1
-streamlit==1.13.0
-scikit-learn==1.1.2
+altair==5.0.1
+matplotlib==3.7.2
+pandas==2.0.3
+scikit-learn==1.3.0
+streamlit==1.25.0
